--- a/files/src/scripts/translations/DE.json
+++ b/files/src/scripts/translations/DE.json
@@ -1,65 +1,69 @@
 {
-	"UNPACKING": "Auspacken",
-	"ALLOW_NEW_VERSION_AUTO": "Eine neue Version des Programms ist verfügbar. Klicken Sie auf, um automatisch zu aktualisieren.",
+	"CLOSE": "Schließen",
+	"UPDATE": "Aktualisieren",
+	"IGNORE": "Ignorieren",
+
+	"ADDONS_CATEGORY_TITLE": "Addons",
 	"ALLOW_NEW_VERSION": "Eine neue Version des Programms ist verfügbar. Klicken Sie hier, um zur Download-Seite zu gelangen.",
-	"NOTIFICATION": "Norifizierung",
-	"PATHS_MENU_ITEM_LABEL": "Pfade",
-	"LANGUAGE_MENU_ITEM_LABEL": "Sprache",
-	"EDIT_FILE_BUTTON": "Bearbeiten",
-	"INITIAL_NOT_FOUND": "initial.pak nicht gefunden",
-	"CLASSES_NOT_FOUND": "Папка Klassen nicht gefunden",
-	"DLC_FOLDER_NOT_FOUND": "DLC-Ordner nicht gefunden",
-	"ERFOLG": "Erfolg",
-	"SELECT_GROUP": "Gruppe Wählen",
-	"FEHLER": "Fehler",
-	"FILE_MENU_LABEL": "Datei",
+	"ALLOW_NEW_VERSION_AUTO": "Eine neue Version des Programms ist verfügbar",
+	"BACKUP_ERROR": "Die Sicherung konnte nicht gespeichert werden.",
 	"BACKUP_MENU_LABEL": "Backup",
-	"SETTINGS_MENU_ITEM_LABEL": "Einstellungen",
-	"RESET_MENU_ITEM_LABEL": "Zurücksetzen",
-	"EXIT_MENU_ITEM_LABEL": "Exit",
-	"HELP_MENU_LABEL": "Hilfe",
-	"HOW_TO_USE_TITLE": "Wie benutzt man",
-	"RESTORE_MENU_ITEM_LABEL": "Standard Wiederherstellen",
+	"BY_DEFAULT": "Standard",
+	"CARGO_CATEGORY_TITLE": "Güter",
+	"CLASSES_NOT_FOUND": "Папка Klassen nicht gefunden",
+	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Die aktuelle Erstsicherung konnte nicht gelöscht werden.",
+	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Die alte Erstsicherung konnte nicht gelöscht werden.",
 	"DEV_MODE_LABEL": "Entwickler",
-	"IGNORE_UPDATES_LABEL": "Updates ignorieren",
-	"SHOW_WINRAR_WINDOW_LABEL": "WinRAR-Fenster anzeigen",
-	"DISABLE_LIMITS_LABEL": "Einschränkungen deaktivieren",
 	"DISABLE_DLC_LABEL": "DLC-Unterstützung deaktivieren",
 	"DISABLE_EDITOR_LABEL_LABEL": "Signatur nicht einfügen",
-	"HIDE_RESET_BUTTON_LABEL": "Reset-Taste des Programms ausblenden",
-	"ONLY_DEVELOPER_EDIT_TEXT": "Nur im Entwicklermodus bearbeiten",
+	"DISABLE_LIMITS_LABEL": "Einschränkungen deaktivieren",
+	"DLC_FOLDER_NOT_FOUND": "DLC-Ordner nicht gefunden",
+	"DLC_LIST_TITLE": "Addenda",
 	"DLC_MENU_ITEM_LABEL": "DLC",
-	"ADDONS_CATEGORY_TITLE": "Addons",
-	"WHEELS_CATEGORY_TITLE": "Räder",
-	"WINCHES_CATEGORY_TITLE": "Winden",
-	"GEARBOXES_CATEGORY_TITLE": "Getriebe",
+	"EDIT_FILE_BUTTON": "Bearbeiten",
+	"EMPTY_FOLDER_ERROR": "Sie haben keinen Ordner ausgewählt!",
 	"ENGINES_CATEGORY_TITLE": "Motoren",
-	"SUSPENSION_CATEGORY_TITLE": "Suspensionen",
-	"SUCCESS_BACKUP_SAVE": "Die Initiale.pak backup wurde erfolgreich gespeichert.",
-	"SUCCESS_INITIAL_RESTORE": "initial.pak wurde erfolgreich restauriert.",
-	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Die aktuelle Erstsicherung konnte nicht gelöscht werden.",
+	"ERFOLG": "Erfolg",
+	"EXIT_MENU_ITEM_LABEL": "Exit",
+	"FEHLER": "Fehler",
+	"FILE_MENU_LABEL": "Datei",
 	"FIRST_STEPS_DESCRIPTION": "Ersteinrichtung des Programms.",
 	"GAME_FOLDER_LABEL": "Spiel-Ordner",
-	"OPEN_BUTTON": "Öffnen",
-	"OPEN_INITIAL_BUTTON": "Öffnen Sie einen Ordner mit initial.pak",
+	"GEARBOXES_CATEGORY_TITLE": "Getriebe",
+	"HELP_MENU_LABEL": "Hilfe",
+	"HIDE_RESET_BUTTON_LABEL": "Reset-Taste des Programms ausblenden",
+	"HOW_TO_USE_TITLE": "Wie benutzt man",
+	"IGNORE_UPDATES_LABEL": "Updates ignorieren",
+	"INITIAL_NOT_FOUND": "initial.pak nicht gefunden",
+	"INVALID_FOLDER_ERROR": "Sie haben den falschen Ordner ausgewählt!",
+	"LANGUAGE_MENU_ITEM_LABEL": "Sprache",
+	"LIST_TITLE": "Wählen Sie zum Bearbeiten",
+	"MAIN_LIST_TITLE": "Original",
+	"NOTIFICATION": "Norifizierung",
 	"NO_GAME_FOLDER": "Die Auswahl des Ordners mit dem Spiel ist obligatorisch!",
 	"NO_MEDIA_FOLDER": "Die Auswahl des Ordners [media] ist obligatorisch!",
-	"BACKUP_ERROR": "Die Sicherung konnte nicht gespeichert werden.",
-	"READ_FILE_ERROR": "Die Datei konnte nicht im Pfad gelesen werden.",
-	"WRITE_FILE_ERROR": "Fehler beim Schreiben in die Datei.",
-	"UNDEFINED_LIST_TYPE": "Ungültiger Blatttyp. Der Typ ist nicht einer von [trucks, trailers, cargo].",
+	"ONLY_DEVELOPER_EDIT_TEXT": "Nur im Entwicklermodus bearbeiten",
+	"OPEN_BUTTON": "Öffnen",
+	"OPEN_INITIAL_BUTTON": "Öffnen Sie einen Ordner mit initial.pak",
 	"OPEN_WINDOW_ERROR": "Das Fenster konnte nicht geöffnet werden.",
+	"PATHS_MENU_ITEM_LABEL": "Pfade",
+	"READ_FILE_ERROR": "Die Datei konnte nicht im Pfad gelesen werden.",
+	"RESET_MENU_ITEM_LABEL": "Zurücksetzen",
+	"RESTORE_MENU_ITEM_LABEL": "Standard Wiederherstellen",
+	"SAVE_BUTTON": "Datei",
 	"SAVE_CONFIG_ERROR": "Die Konfiguration konnte nicht gespeichert werden.",
 	"SAVE_INITIAL_BACKUP_ERROR": "Erste Sicherung konnte nicht gespeichert werden.",
-	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Die alte Erstsicherung konnte nicht gelöscht werden.",
-	"INVALID_FOLDER_ERROR": "Sie haben den falschen Ordner ausgewählt!",
-	"EMPTY_FOLDER_ERROR": "Sie haben keinen Ordner ausgewählt!",
-	"LIST_TITLE": "Wählen Sie zum Bearbeiten",
-	"DLC_LIST_TITLE": "Addenda",
-	"MAIN_LIST_TITLE": "Original",
-	"TRUCKS_CATEGORY_TITLE": "Autos",
+	"SELECT_GROUP": "Gruppe Wählen",
+	"SETTINGS_MENU_ITEM_LABEL": "Einstellungen",
+	"SHOW_WINRAR_WINDOW_LABEL": "WinRAR-Fenster anzeigen",
+	"SUCCESS_BACKUP_SAVE": "Die Initiale.pak backup wurde erfolgreich gespeichert.",
+	"SUCCESS_INITIAL_RESTORE": "initial.pak wurde erfolgreich restauriert.",
+	"SUSPENSION_CATEGORY_TITLE": "Suspensionen",
 	"TRAILERS_CATEGORY_TITLE": "Nutzfahrzeuge",
-	"CARGO_CATEGORY_TITLE": "Güter",
-	"BY_DEFAULT": "Standard",
-	"SAVE_BUTTON": "Datei"
+	"TRUCKS_CATEGORY_TITLE": "Autos",
+	"UNDEFINED_LIST_TYPE": "Ungültiger Blatttyp. Der Typ ist nicht einer von [trucks, trailers, cargo].",
+	"UNPACKING": "Auspacken",
+	"WHEELS_CATEGORY_TITLE": "Räder",
+	"WINCHES_CATEGORY_TITLE": "Winden",
+	"WRITE_FILE_ERROR": "Fehler beim Schreiben in die Datei."
 }
