--- a/files/src/scripts/translations/EN.json
+++ b/files/src/scripts/translations/EN.json
@@ -1,65 +1,69 @@
 {
-	"UNPACKING": "Unpacking",
-	"ALLOW_NEW_VERSION_AUTO": "A new version of the program is available. Click for automatic updates.",
+	"CLOSE": "Close",
+	"UPDATE": "Update",
+	"IGNORE": "Ignore",
+
+	"ADDONS_CATEGORY_TITLE": "Addons",
 	"ALLOW_NEW_VERSION": "A new version of the program is available. Click to go to the download page.",
-	"NOTIFICATION": "Notification",
-	"PATHS_MENU_ITEM_LABEL": "Paths",
-	"LANGUAGE_MENU_ITEM_LABEL": "Language",
-	"EDIT_FILE_BUTTON": "Edit",
-	"INITIAL_NOT_FOUND": "initial.pak not found",
-	"CLASSES_NOT_FOUND": "Папка classes not found",
-	"DLC_FOLDER_NOT_FOUND": "DLC folder not found",
-	"SUCCESS": "Success",
-	"SELECT_GROUP": "Choose group",
-	"ERROR": "Error",
-	"FILE_MENU_LABEL": "File",
-	"HELP_MENU_LABEL": "Help",
-	"HOW_TO_USE_TITLE": "How to use",
+	"ALLOW_NEW_VERSION_AUTO": "A new version of the program is available",
+	"BACKUP_ERROR": "Failed to save backup.",
 	"BACKUP_MENU_LABEL": "Backup",
-	"SETTINGS_MENU_ITEM_LABEL": "Settings",
-	"RESET_MENU_ITEM_LABEL": "Reset",
-	"EXIT_MENU_ITEM_LABEL": "Exit",
-	"RESTORE_MENU_ITEM_LABEL": "Restore",
+	"BY_DEFAULT": "Default",
+	"CARGO_CATEGORY_TITLE": "Cargo",
+	"CLASSES_NOT_FOUND": "Папка classes not found",
+	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Failed to delete the current initial backup.",
+	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Failed to delete the old initial backup.",
 	"DEV_MODE_LABEL": "Developer",
-	"IGNORE_UPDATES_LABEL": "Ignore updates",
-	"SHOW_WINRAR_WINDOW_LABEL": "Show WinRAR window",
-	"DISABLE_LIMITS_LABEL": "Disable restrictions",
 	"DISABLE_DLC_LABEL": "Disable DLC support",
 	"DISABLE_EDITOR_LABEL_LABEL": "Do not insert signature",
-	"HIDE_RESET_BUTTON_LABEL": "Hide program reset button",
-	"ONLY_DEVELOPER_EDIT_TEXT": "Edit only in developer mode",
+	"DISABLE_LIMITS_LABEL": "Disable restrictions",
+	"DLC_FOLDER_NOT_FOUND": "DLC folder not found",
+	"DLC_LIST_TITLE": "DLC",
 	"DLC_MENU_ITEM_LABEL": "DLC",
-	"ADDONS_CATEGORY_TITLE": "Addons",
-	"WHEELS_CATEGORY_TITLE": "Wheels",
-	"WINCHES_CATEGORY_TITLE": "Winches",
-	"GEARBOXES_CATEGORY_TITLE": "Gearboxes",
+	"EDIT_FILE_BUTTON": "Edit",
+	"EMPTY_FOLDER_ERROR": "You didn\"t select a folder!",
 	"ENGINES_CATEGORY_TITLE": "Engines",
-	"SUSPENSIONS_CATEGORY_TITLE": "Suspensions",
-	"SUCCESS_BACKUP_SAVE": "The initial.pak backup was saved successfully.",
-	"SUCCESS_INITIAL_RESTORE": "initial.pak was successfully restored.",
-	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Failed to delete the current initial backup.",
+	"ERROR": "Error",
+	"EXIT_MENU_ITEM_LABEL": "Exit",
+	"FILE_MENU_LABEL": "File",
 	"FIRST_STEPS_DESCRIPTION": "Initial setup of the program.",
 	"GAME_FOLDER_LABEL": "Game folder",
-	"OPEN_BUTTON": "Open",
-	"OPEN_INITIAL_BUTTON": "Open a folder with initial.pak",
+	"GEARBOXES_CATEGORY_TITLE": "Gearboxes",
+	"HELP_MENU_LABEL": "Help",
+	"HIDE_RESET_BUTTON_LABEL": "Hide program reset button",
+	"HOW_TO_USE_TITLE": "How to use",
+	"IGNORE_UPDATES_LABEL": "Ignore updates",
+	"INITIAL_NOT_FOUND": "initial.pak not found",
+	"INVALID_FOLDER_ERROR": "You have selected the wrong folder!",
+	"LANGUAGE_MENU_ITEM_LABEL": "Language",
+	"LIST_TITLE": "Select to edit",
+	"MAIN_LIST_TITLE": "Main",
+	"NOTIFICATION": "Notification",
 	"NO_GAME_FOLDER": "The choice of the folder with the game is required!",
 	"NO_MEDIA_FOLDER": "The choice of the [media] folder is required!",
-	"BACKUP_ERROR": "Failed to save backup.",
-	"READ_FILE_ERROR": "Could not read the file on the path.",
-	"WRITE_FILE_ERROR": "Could not write to file.",
-	"UNDEFINED_LIST_TYPE": "Incorrect sheet type. The type is not one of [trucks, trailers, cargo].",
+	"ONLY_DEVELOPER_EDIT_TEXT": "Edit only in developer mode",
+	"OPEN_BUTTON": "Open",
+	"OPEN_INITIAL_BUTTON": "Open a folder with initial.pak",
 	"OPEN_WINDOW_ERROR": "The window could not be opened.",
+	"PATHS_MENU_ITEM_LABEL": "Paths",
+	"READ_FILE_ERROR": "Could not read the file on the path.",
+	"RESET_MENU_ITEM_LABEL": "Reset",
+	"RESTORE_MENU_ITEM_LABEL": "Restore",
+	"SAVE_BUTTON": "Save",
 	"SAVE_CONFIG_ERROR": "Failed to save the config.",
 	"SAVE_INITIAL_BACKUP_ERROR": "Failed to save initial backup.",
-	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Failed to delete the old initial backup.",
-	"INVALID_FOLDER_ERROR": "You have selected the wrong folder!",
-	"EMPTY_FOLDER_ERROR": "You didn\"t select a folder!",
-	"LIST_TITLE": "Select to edit",
-	"DLC_LIST_TITLE": "DLC",
-	"MAIN_LIST_TITLE": "Main",
-	"TRUCKS_CATEGORY_TITLE": "Trucks",
+	"SELECT_GROUP": "Choose group",
+	"SETTINGS_MENU_ITEM_LABEL": "Settings",
+	"SHOW_WINRAR_WINDOW_LABEL": "Show WinRAR window",
+	"SUCCESS": "Success",
+	"SUCCESS_BACKUP_SAVE": "The initial.pak backup was saved successfully.",
+	"SUCCESS_INITIAL_RESTORE": "initial.pak was successfully restored.",
+	"SUSPENSIONS_CATEGORY_TITLE": "Suspensions",
 	"TRAILERS_CATEGORY_TITLE": "Trailers",
-	"CARGO_CATEGORY_TITLE": "Cargo",
-	"BY_DEFAULT": "Default",
-	"SAVE_BUTTON": "Save"
+	"TRUCKS_CATEGORY_TITLE": "Trucks",
+	"UNDEFINED_LIST_TYPE": "Incorrect sheet type. The type is not one of [trucks, trailers, cargo].",
+	"UNPACKING": "Unpacking",
+	"WHEELS_CATEGORY_TITLE": "Wheels",
+	"WINCHES_CATEGORY_TITLE": "Winches",
+	"WRITE_FILE_ERROR": "Could not write to file."
 }
