--- a/files/src/scripts/translations/RU.json
+++ b/files/src/scripts/translations/RU.json
@@ -1,65 +1,69 @@
 {
-	"UNPACKING": "Распаковка",
-	"ALLOW_NEW_VERSION_AUTO": "Доступна новая версия программы. Нажмите для автоматического обновления.",
+	"CLOSE": "Закрыть",
+	"UPDATE": "Обновить",
+	"IGNORE": "Игнорировать",
+
+	"ADDONS_CATEGORY_TITLE": "Аддоны",
 	"ALLOW_NEW_VERSION": "Доступна новая версия программы. Нажмите чтобы перейти на страницу скачивания.",
-	"NOTIFICATION": "Уведомление",
-	"PATHS_MENU_ITEM_LABEL": "Пути",
-	"LANGUAGE_MENU_ITEM_LABEL": "Язык",
-	"EDIT_FILE_BUTTON": "Редактировать",
-	"INITIAL_NOT_FOUND": "initial.pak не найден.",
-	"CLASSES_NOT_FOUND": "Папка classes не найдена.",
-	"DLC_FOLDER_NOT_FOUND": "Папка с дополнениями не найдена",
-	"SUCCESS": "Успех",
-	"SELECT_GROUP": "Выберите группу",
-	"FILE_MENU_LABEL": "Файл",
+	"ALLOW_NEW_VERSION_AUTO": "Доступна новая версия программы",
+	"BACKUP_ERROR": "Не удалось сохранить бэкап.",
 	"BACKUP_MENU_LABEL": "Бэкап",
-	"HELP_MENU_LABEL": "Помощь",
-	"HOW_TO_USE_TITLE": "Как пользоваться",
-	"SETTINGS_MENU_ITEM_LABEL": "Настройки",
-	"RESET_MENU_ITEM_LABEL": "Сбросить",
-	"EXIT_MENU_ITEM_LABEL": "Выход",
-	"RESTORE_MENU_ITEM_LABEL": "Восстановить",
+	"BY_DEFAULT": "По умолчанию",
+	"CARGO_CATEGORY_TITLE": "Грузы",
+	"CLASSES_NOT_FOUND": "Папка classes не найдена.",
+	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Не удалось удалить текущий бэкап initial.pak",
+	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Не удалось удалить старый бэкап initial.pak.",
 	"DEV_MODE_LABEL": "Разработчик",
-	"IGNORE_UPDATES_LABEL": "Игнорировать обновления",
-	"SHOW_WINRAR_WINDOW_LABEL": "Показывать окно WinRAR",
-	"DISABLE_LIMITS_LABEL": "Выключить ограничения",
 	"DISABLE_DLC_LABEL": "Выключить поддержку DLC",
 	"DISABLE_EDITOR_LABEL_LABEL": "Не вставлять подпись",
-	"HIDE_RESET_BUTTON_LABEL": "Скрыть кнопку сброса программы",
-	"ONLY_DEVELOPER_EDIT_TEXT": "Только в режиме разработчика",
+	"DISABLE_LIMITS_LABEL": "Выключить ограничения",
+	"DLC_FOLDER_NOT_FOUND": "Папка с дополнениями не найдена",
+	"DLC_LIST_TITLE": "Дополнения",
 	"DLC_MENU_ITEM_LABEL": "Дополнения",
-	"ADDONS_CATEGORY_TITLE": "Аддоны",
-	"WHEELS_CATEGORY_TITLE": "Колёса",
-	"WINCHES_CATEGORY_TITLE": "Лебёдки",
-	"GEARBOXES_CATEGORY_TITLE": "Коробки передач",
+	"EDIT_FILE_BUTTON": "Редактировать",
+	"EMPTY_FOLDER_ERROR": "Вы не выбрали папку!",
 	"ENGINES_CATEGORY_TITLE": "Двигатели",
-	"SUSPENSIONS_CATEGORY_TITLE": "Подвески",
 	"ERROR": "Ошибка",
-	"SUCCESS_BACKUP_SAVE": "Бэкап initial.pak успешно сохранён.",
-	"SUCCESS_INITIAL_RESTORE": "initial.pak был успешно восстановлен.",
-	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Не удалось удалить текущий бэкап initial.pak",
+	"EXIT_MENU_ITEM_LABEL": "Выход",
+	"FILE_MENU_LABEL": "Файл",
 	"FIRST_STEPS_DESCRIPTION": "Первоначальная настройка.",
 	"GAME_FOLDER_LABEL": "Папка с игрой",
-	"OPEN_BUTTON": "Открыть",
-	"OPEN_INITIAL_BUTTON": "Открыть папку с initial.pak",
+	"GEARBOXES_CATEGORY_TITLE": "Коробки передач",
+	"HELP_MENU_LABEL": "Помощь",
+	"HIDE_RESET_BUTTON_LABEL": "Скрыть кнопку сброса программы",
+	"HOW_TO_USE_TITLE": "Как пользоваться",
+	"IGNORE_UPDATES_LABEL": "Игнорировать обновления",
+	"INITIAL_NOT_FOUND": "initial.pak не найден.",
+	"INVALID_FOLDER_ERROR": "Вы выбрали неправильную папку!",
+	"LANGUAGE_MENU_ITEM_LABEL": "Язык",
+	"LIST_TITLE": "Выберите для редактирования",
+	"MAIN_LIST_TITLE": "Основное",
+	"NOTIFICATION": "Уведомление",
 	"NO_GAME_FOLDER": "Выбор папки с игрой обязателен!",
 	"NO_MEDIA_FOLDER": "Выбор папки [media] обязателен!",
-	"BACKUP_ERROR": "Не удалось сохранить бэкап.",
-	"READ_FILE_ERROR": "Не удалось считать файл по пути.",
-	"WRITE_FILE_ERROR": "Не удалось записать в файл.",
-	"UNDEFINED_LIST_TYPE": "Неправильный тип листа. Тип не является одним из [trucks, trailers, cargo].",
+	"ONLY_DEVELOPER_EDIT_TEXT": "Только в режиме разработчика",
+	"OPEN_BUTTON": "Открыть",
+	"OPEN_INITIAL_BUTTON": "Открыть папку с initial.pak",
 	"OPEN_WINDOW_ERROR": "Не удалось открыть окно.",
+	"PATHS_MENU_ITEM_LABEL": "Пути",
+	"READ_FILE_ERROR": "Не удалось считать файл по пути.",
+	"RESET_MENU_ITEM_LABEL": "Сбросить",
+	"RESTORE_MENU_ITEM_LABEL": "Восстановить",
+	"SAVE_BUTTON": "Сохранить",
 	"SAVE_CONFIG_ERROR": "Не удалось сохранить конфиг.",
 	"SAVE_INITIAL_BACKUP_ERROR": "Не удалось сделать бэкап initial.pak.",
-	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Не удалось удалить старый бэкап initial.pak.",
-	"INVALID_FOLDER_ERROR": "Вы выбрали неправильную папку!",
-	"EMPTY_FOLDER_ERROR": "Вы не выбрали папку!",
-	"LIST_TITLE": "Выберите для редактирования",
-	"DLC_LIST_TITLE": "Дополнения",
-	"MAIN_LIST_TITLE": "Основное",
-	"TRUCKS_CATEGORY_TITLE": "Автомобили",
+	"SELECT_GROUP": "Выберите группу",
+	"SETTINGS_MENU_ITEM_LABEL": "Настройки",
+	"SHOW_WINRAR_WINDOW_LABEL": "Показывать окно WinRAR",
+	"SUCCESS": "Успех",
+	"SUCCESS_BACKUP_SAVE": "Бэкап initial.pak успешно сохранён.",
+	"SUCCESS_INITIAL_RESTORE": "initial.pak был успешно восстановлен.",
+	"SUSPENSIONS_CATEGORY_TITLE": "Подвески",
 	"TRAILERS_CATEGORY_TITLE": "Прицепы",
-	"CARGO_CATEGORY_TITLE": "Грузы",
-	"BY_DEFAULT": "По умолчанию",
-	"SAVE_BUTTON": "Сохранить"
+	"TRUCKS_CATEGORY_TITLE": "Автомобили",
+	"UNDEFINED_LIST_TYPE": "Неправильный тип листа. Тип не является одним из [trucks, trailers, cargo].",
+	"UNPACKING": "Распаковка",
+	"WHEELS_CATEGORY_TITLE": "Колёса",
+	"WINCHES_CATEGORY_TITLE": "Лебёдки",
+	"WRITE_FILE_ERROR": "Не удалось записать в файл."
 }
