--- a/files/src/scripts/translations/RU.json
+++ b/files/src/scripts/translations/RU.json
@@ -2,6 +2,9 @@
 	"CLOSE": "Закрыть",
 	"UPDATE": "Обновить",
 	"IGNORE": "Игнорировать",
+	"MODS_LIST_TITLE": "Модификации",
+	"LOADING_MODS": "Загрузка модов",
+	"DISABLE_MODS_LABEL": "Выключить поддержку модов",
 
 	"ADDONS_CATEGORY_TITLE": "Аддоны",
 	"ALLOW_NEW_VERSION": "Доступна новая версия программы. Нажмите чтобы перейти на страницу скачивания.",
