--- a/files/src/scripts/translations/EN.json
+++ b/files/src/scripts/translations/EN.json
@@ -2,6 +2,9 @@
 	"CLOSE": "Close",
 	"UPDATE": "Update",
 	"IGNORE": "Ignore",
+	"MODS_LIST_TITLE": "Mods",
+	"LOADING_MODS": "Mods loading",
+	"DISABLE_MODS_LABEL": "Disable mods support",
 
 	"ADDONS_CATEGORY_TITLE": "Addons",
 	"ALLOW_NEW_VERSION": "A new version of the program is available. Click to go to the download page.",
