--- a/files/src/scripts/translations/DE.json
+++ b/files/src/scripts/translations/DE.json
@@ -2,18 +2,25 @@
 	"CLOSE": "Schließen",
 	"UPDATE": "Aktualisieren",
 	"IGNORE": "Ignorieren",
-	"MODS_LIST_TITLE": "Mods",
-	"LOADING_MODS": "Mods loading",
-	"DISABLE_MODS_LABEL": "Disable mods support",
-
+	"MODS_LIST_TITLE": "Modifikationen",
+	"LOADING_MODS": "Mods werden geladen",
+	"ENABLE_MODS_SUPPORT": "Aktivieren von mods zu unterstützen",
+	"DISABLE_MODS_LABEL": "Deaktiviere die Mods-Unterstützung",
+	"EXPERIMENTAL": "Experimentell",
+	"INITIAL_LABEL": "Pfad zu initial.pak",
+	"MODS_WARNING" :" Unterstützung für Änderungen deaktiviert",
+	"INVALID_INITIAL_ERROR": "Ungültiger initial ausgewählt.pak",
+	"NO_PROFILE": "Benutzerordner wurde nicht gefunden",
+	"MODS_FOLDER_NOT_EXISTED": "Ordner mit Mods nicht gefunden",
+	"MANUAL_INITIAL": "Manuelle Auswahl von initial.pak",
 	"ADDONS_CATEGORY_TITLE": "Addons",
 	"ALLOW_NEW_VERSION": "Eine neue Version des Programms ist verfügbar. Klicken Sie hier, um zur Download-Seite zu gelangen.",
 	"ALLOW_NEW_VERSION_AUTO": "Eine neue Version des Programms ist verfügbar",
 	"BACKUP_ERROR": "Die Sicherung konnte nicht gespeichert werden.",
-	"BACKUP_MENU_LABEL": "Backup",
+	"BACKUP_MENU_LABEL": "Sicherung",
 	"BY_DEFAULT": "Standard",
 	"CARGO_CATEGORY_TITLE": "Güter",
-	"CLASSES_NOT_FOUND": "Папка Klassen nicht gefunden",
+	"CLASSES_NOT_FOUND": "Klassen nicht gefunden",
 	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Die aktuelle Erstsicherung konnte nicht gelöscht werden.",
 	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Die alte Erstsicherung konnte nicht gelöscht werden.",
 	"DEV_MODE_LABEL": "Entwickler",
