--- a/files/src/scripts/translations/EN.json
+++ b/files/src/scripts/translations/EN.json
@@ -4,8 +4,15 @@
 	"IGNORE": "Ignore",
 	"MODS_LIST_TITLE": "Mods",
 	"LOADING_MODS": "Mods loading",
+	"MODS_WARNING": "Modification support disabled",
+	"NO_PROFILE": "User folder not found",
+	"EXPERIMENTAL": "Experimental",
+	"INITIAL_LABEL": "Path to initial.pak",
+	"INVALID_INITIAL_ERROR": "Invalid initial.pak selected",
+	"MODS_FOLDER_NOT_EXISTED": "Mod folder not found",
+	"ENABLE_MODS_LABEL": "Enable mods support",
 	"DISABLE_MODS_LABEL": "Disable mods support",
-
+	"MANUAL_INITIAL": "Manual selection of initial.pak",
 	"ADDONS_CATEGORY_TITLE": "Addons",
 	"ALLOW_NEW_VERSION": "A new version of the program is available. Click to go to the download page.",
 	"ALLOW_NEW_VERSION_AUTO": "A new version of the program is available",
