--- a/files/src/scripts/translations/RU.json
+++ b/files/src/scripts/translations/RU.json
@@ -3,9 +3,16 @@
 	"UPDATE": "Обновить",
 	"IGNORE": "Игнорировать",
 	"MODS_LIST_TITLE": "Модификации",
+	"MODS_WARNING": "Поддержка модификаций отключена",
+	"NO_PROFILE": "Не найдена папка пользователя",
+	"EXPERIMENTAL": "Экспериментально",
+	"MODS_FOLDER_NOT_EXISTED": "Не найдена папка с модами",
+	"INITIAL_LABEL": "Путь к initial.pak",
+	"INVALID_INITIAL_ERROR": "Выбран неверный initial.pak",
 	"LOADING_MODS": "Загрузка модов",
+	"MANUAL_INITIAL": "Ручной выбор initial.pak",
+	"ENABLE_MODS_LABEL": "Включить поддержку модов",
 	"DISABLE_MODS_LABEL": "Выключить поддержку модов",
-
 	"ADDONS_CATEGORY_TITLE": "Аддоны",
 	"ALLOW_NEW_VERSION": "Доступна новая версия программы. Нажмите чтобы перейти на страницу скачивания.",
 	"ALLOW_NEW_VERSION_AUTO": "Доступна новая версия программы",
