--- a/files/src/scripts/translations/DE.json
+++ b/files/src/scripts/translations/DE.json
@@ -5,6 +5,7 @@
 	"MODS_LIST_TITLE": "Modifikationen",
 	"LOADING_MODS": "Mods werden geladen",
 	"ENABLE_MODS_SUPPORT": "Aktivieren von mods zu unterstützen",
+	"LOADING_TRANSLATION": "Übersetzungen herunterladen",
 	"DISABLE_MODS_LABEL": "Deaktiviere die Mods-Unterstützung",
 	"EXPERIMENTAL": "Experimentell",
 	"INITIAL_LABEL": "Pfad zu initial.pak",
