--- a/files/src/scripts/translations/DE.json
+++ b/files/src/scripts/translations/DE.json
@@ -3,6 +3,7 @@
 	"UPDATE": "Aktualisieren",
 	"IGNORE": "Ignorieren",
 	"MODS_LIST_TITLE": "Modifikationen",
+	"SEARCH": "Suche",
 	"LOADING_MODS": "Mods werden geladen",
 	"ENABLE_MODS_SUPPORT": "Aktivieren von mods zu unterstützen",
 	"LOADING_TRANSLATION": "Übersetzungen herunterladen",
