--- a/files/src/scripts/translations/EN.json
+++ b/files/src/scripts/translations/EN.json
@@ -4,6 +4,7 @@
 	"IGNORE": "Ignore",
 	"MODS_LIST_TITLE": "Mods",
 	"LOADING_MODS": "Mods loading",
+	"SEARCH": "Search",
 	"MODS_WARNING": "Modification support disabled",
 	"NO_PROFILE": "User folder not found",
 	"EXPERIMENTAL": "Experimental",
