--- a/files/src/scripts/translations/RU.json
+++ b/files/src/scripts/translations/RU.json
@@ -4,6 +4,7 @@
 	"IGNORE": "Игнорировать",
 	"MODS_LIST_TITLE": "Модификации",
 	"MODS_WARNING": "Поддержка модификаций отключена",
+	"SEARCH": "Поиск",
 	"NO_PROFILE": "Не найдена папка пользователя",
 	"LOADING_TRANSLATION": "Загрузка переводов",
 	"EXPERIMENTAL": "Экспериментально",
