--- a/files/src/scripts/translations/DE.json
+++ b/files/src/scripts/translations/DE.json
@@ -1,4 +1,5 @@
 {
+	"AUTO_INITIAL_TITLE": "Automatische Auswahl initial.pak funktioniert nur in der Version von Epic Games.",
 	"CLOSE": "Schließen",
 	"UPDATE": "Aktualisieren",
 	"IGNORE": "Ignorieren",
@@ -7,8 +8,8 @@
 	"LOADING_MODS": "Mods werden geladen",
 	"ENABLE_MODS_SUPPORT": "Aktivieren von mods zu unterstützen",
 	"LOADING_TRANSLATION": "Übersetzungen herunterladen",
-	"DISABLE_MODS_LABEL": "Deaktiviere die Mods-Unterstützung",
-	"EXPERIMENTAL": "Experimentell",
+	"MODS_LABEL": "Modifikationen",
+	"MODS_ADD_BUTTON": "Hinzufügen",
 	"INITIAL_LABEL": "Pfad zu initial.pak",
 	"MODS_WARNING" :" Unterstützung für Änderungen deaktiviert",
 	"INVALID_INITIAL_ERROR": "Ungültiger initial ausgewählt.pak",
@@ -26,26 +27,26 @@
 	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Die aktuelle Erstsicherung konnte nicht gelöscht werden.",
 	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Die alte Erstsicherung konnte nicht gelöscht werden.",
 	"DEV_MODE_LABEL": "Entwickler",
-	"DISABLE_DLC_LABEL": "DLC-Unterstützung deaktivieren",
+	"DLC_LABEL": "Addenda",
 	"DISABLE_EDITOR_LABEL_LABEL": "Signatur nicht einfügen",
-	"DISABLE_LIMITS_LABEL": "Einschränkungen deaktivieren",
+	"LIMITS_LABEL": "Beschränkungen",
 	"DLC_FOLDER_NOT_FOUND": "DLC-Ordner nicht gefunden",
 	"DLC_LIST_TITLE": "Addenda",
 	"DLC_MENU_ITEM_LABEL": "DLC",
 	"EDIT_FILE_BUTTON": "Bearbeiten",
 	"EMPTY_FOLDER_ERROR": "Sie haben keinen Ordner ausgewählt!",
 	"ENGINES_CATEGORY_TITLE": "Motoren",
-	"ERFOLG": "Erfolg",
+	"SUCCESS": "Erfolg",
 	"EXIT_MENU_ITEM_LABEL": "Exit",
-	"FEHLER": "Fehler",
+	"ERROR": "Fehler",
 	"FILE_MENU_LABEL": "Datei",
 	"FIRST_STEPS_DESCRIPTION": "Ersteinrichtung des Programms.",
 	"GAME_FOLDER_LABEL": "Spiel-Ordner",
 	"GEARBOXES_CATEGORY_TITLE": "Getriebe",
 	"HELP_MENU_LABEL": "Hilfe",
-	"HIDE_RESET_BUTTON_LABEL": "Reset-Taste des Programms ausblenden",
+	"RESET_BUTTON_LABEL": "Reset-Taste",
 	"HOW_TO_USE_TITLE": "Wie benutzt man",
-	"IGNORE_UPDATES_LABEL": "Updates ignorieren",
+	"UPDATES_LABEL": "Updates",
 	"INITIAL_NOT_FOUND": "initial.pak nicht gefunden",
 	"INVALID_FOLDER_ERROR": "Sie haben den falschen Ordner ausgewählt!",
 	"LANGUAGE_MENU_ITEM_LABEL": "Sprache",
@@ -67,7 +68,6 @@
 	"SAVE_INITIAL_BACKUP_ERROR": "Erste Sicherung konnte nicht gespeichert werden.",
 	"SELECT_GROUP": "Gruppe Wählen",
 	"SETTINGS_MENU_ITEM_LABEL": "Einstellungen",
-	"SHOW_WINRAR_WINDOW_LABEL": "WinRAR-Fenster anzeigen",
 	"SUCCESS_BACKUP_SAVE": "Die Initiale.pak backup wurde erfolgreich gespeichert.",
 	"SUCCESS_INITIAL_RESTORE": "initial.pak wurde erfolgreich restauriert.",
 	"SUSPENSION_CATEGORY_TITLE": "Suspensionen",
