--- a/files/src/scripts/translations/EN.json
+++ b/files/src/scripts/translations/EN.json
@@ -1,19 +1,18 @@
 {
+	"AUTO_INITIAL_TITLE": "The automatic selection of initial.pak only works in the version from Epic Games.",
 	"CLOSE": "Close",
 	"UPDATE": "Update",
 	"IGNORE": "Ignore",
 	"MODS_LIST_TITLE": "Mods",
 	"LOADING_MODS": "Mods loading",
 	"SEARCH": "Search",
-	"MODS_WARNING": "Modification support disabled",
-	"NO_PROFILE": "User folder not found",
-	"EXPERIMENTAL": "Experimental",
 	"LOADING_TRANSLATION": "Translation loading",
 	"INITIAL_LABEL": "Path to initial.pak",
 	"INVALID_INITIAL_ERROR": "Invalid initial.pak selected",
 	"MODS_FOLDER_NOT_EXISTED": "Mod folder not found",
 	"ENABLE_MODS_LABEL": "Enable mods support",
-	"DISABLE_MODS_LABEL": "Disable mods support",
+	"MODS_LABEL": "Mods",
+	"MODS_ADD_BUTTON": "Add",
 	"MANUAL_INITIAL": "Manual selection of initial.pak",
 	"ADDONS_CATEGORY_TITLE": "Addons",
 	"ALLOW_NEW_VERSION": "A new version of the program is available. Click to go to the download page.",
@@ -26,9 +25,9 @@
 	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Failed to delete the current initial backup.",
 	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Failed to delete the old initial backup.",
 	"DEV_MODE_LABEL": "Developer",
-	"DISABLE_DLC_LABEL": "Disable DLC support",
+	"DLC_LABEL": "DLC",
 	"DISABLE_EDITOR_LABEL_LABEL": "Do not insert signature",
-	"DISABLE_LIMITS_LABEL": "Disable restrictions",
+	"LIMITS_LABEL": "Restrictions",
 	"DLC_FOLDER_NOT_FOUND": "DLC folder not found",
 	"DLC_LIST_TITLE": "DLC",
 	"DLC_MENU_ITEM_LABEL": "DLC",
@@ -42,9 +41,9 @@
 	"GAME_FOLDER_LABEL": "Game folder",
 	"GEARBOXES_CATEGORY_TITLE": "Gearboxes",
 	"HELP_MENU_LABEL": "Help",
-	"HIDE_RESET_BUTTON_LABEL": "Hide program reset button",
+	"RESET_BUTTON_LABEL": "Reset button",
 	"HOW_TO_USE_TITLE": "How to use",
-	"IGNORE_UPDATES_LABEL": "Ignore updates",
+	"UPDATES_LABEL": "Updates",
 	"INITIAL_NOT_FOUND": "initial.pak not found",
 	"INVALID_FOLDER_ERROR": "You have selected the wrong folder!",
 	"LANGUAGE_MENU_ITEM_LABEL": "Language",
@@ -66,7 +65,6 @@
 	"SAVE_INITIAL_BACKUP_ERROR": "Failed to save initial backup.",
 	"SELECT_GROUP": "Choose group",
 	"SETTINGS_MENU_ITEM_LABEL": "Settings",
-	"SHOW_WINRAR_WINDOW_LABEL": "Show WinRAR window",
 	"SUCCESS": "Success",
 	"SUCCESS_BACKUP_SAVE": "The initial.pak backup was saved successfully.",
 	"SUCCESS_INITIAL_RESTORE": "initial.pak was successfully restored.",
