--- a/files/src/scripts/translations/RU.json
+++ b/files/src/scripts/translations/RU.json
@@ -1,20 +1,18 @@
 {
+	"AUTO_INITIAL_TITLE": "Автоматичекий выбор initial.pak работает только в версии от Epic Games.",
 	"CLOSE": "Закрыть",
 	"UPDATE": "Обновить",
 	"IGNORE": "Игнорировать",
 	"MODS_LIST_TITLE": "Модификации",
-	"MODS_WARNING": "Поддержка модификаций отключена",
 	"SEARCH": "Поиск",
-	"NO_PROFILE": "Не найдена папка пользователя",
 	"LOADING_TRANSLATION": "Загрузка переводов",
-	"EXPERIMENTAL": "Экспериментально",
 	"MODS_FOLDER_NOT_EXISTED": "Не найдена папка с модами",
 	"INITIAL_LABEL": "Путь к initial.pak",
 	"INVALID_INITIAL_ERROR": "Выбран неверный initial.pak",
 	"LOADING_MODS": "Загрузка модов",
 	"MANUAL_INITIAL": "Ручной выбор initial.pak",
-	"ENABLE_MODS_LABEL": "Включить поддержку модов",
-	"DISABLE_MODS_LABEL": "Выключить поддержку модов",
+	"MODS_LABEL": "Модификации",
+	"MODS_ADD_BUTTON": "Добавить",
 	"ADDONS_CATEGORY_TITLE": "Аддоны",
 	"ALLOW_NEW_VERSION": "Доступна новая версия программы. Нажмите чтобы перейти на страницу скачивания.",
 	"ALLOW_NEW_VERSION_AUTO": "Доступна новая версия программы",
@@ -26,9 +24,9 @@
 	"DELETE_CURRENT_INITIAL_BACKUP_ERROR": "Не удалось удалить текущий бэкап initial.pak",
 	"DELETE_OLD_INITIAL_BACKUP_ERROR": "Не удалось удалить старый бэкап initial.pak.",
 	"DEV_MODE_LABEL": "Разработчик",
-	"DISABLE_DLC_LABEL": "Выключить поддержку DLC",
+	"DLC_LABEL": "DLC",
 	"DISABLE_EDITOR_LABEL_LABEL": "Не вставлять подпись",
-	"DISABLE_LIMITS_LABEL": "Выключить ограничения",
+	"LIMITS_LABEL": "Ограничения",
 	"DLC_FOLDER_NOT_FOUND": "Папка с дополнениями не найдена",
 	"DLC_LIST_TITLE": "Дополнения",
 	"DLC_MENU_ITEM_LABEL": "Дополнения",
@@ -42,9 +40,9 @@
 	"GAME_FOLDER_LABEL": "Папка с игрой",
 	"GEARBOXES_CATEGORY_TITLE": "Коробки передач",
 	"HELP_MENU_LABEL": "Помощь",
-	"HIDE_RESET_BUTTON_LABEL": "Скрыть кнопку сброса программы",
+	"RESET_BUTTON_LABEL": "Кнопка сброса",
 	"HOW_TO_USE_TITLE": "Как пользоваться",
-	"IGNORE_UPDATES_LABEL": "Игнорировать обновления",
+	"UPDATES_LABEL": "Обновления",
 	"INITIAL_NOT_FOUND": "initial.pak не найден.",
 	"INVALID_FOLDER_ERROR": "Вы выбрали неправильную папку!",
 	"LANGUAGE_MENU_ITEM_LABEL": "Язык",
@@ -66,7 +64,6 @@
 	"SAVE_INITIAL_BACKUP_ERROR": "Не удалось сделать бэкап initial.pak.",
 	"SELECT_GROUP": "Выберите группу",
 	"SETTINGS_MENU_ITEM_LABEL": "Настройки",
-	"SHOW_WINRAR_WINDOW_LABEL": "Показывать окно WinRAR",
 	"SUCCESS": "Успех",
 	"SUCCESS_BACKUP_SAVE": "Бэкап initial.pak успешно сохранён.",
 	"SUCCESS_INITIAL_RESTORE": "initial.pak был успешно восстановлен.",
