--- a/files/src/scripts/translations/EN.json
+++ b/files/src/scripts/translations/EN.json
@@ -2,6 +2,8 @@
 	"AUTO_INITIAL_TITLE": "The automatic selection of initial.pak only works in the version from Epic Games.",
 	"CLOSE": "Close",
 	"UPDATE": "Update",
+	"SAVING_MESSAGE": "Saving...",
+	"PARSE_FILE_ERROR": "The file cannot be recognized",
 	"IGNORE": "Ignore",
 	"MODS_LIST_TITLE": "Mods",
 	"LOADING_MODS": "Mods loading",
