--- a/files/src/scripts/translations/DE.json
+++ b/files/src/scripts/translations/DE.json
@@ -7,14 +7,16 @@
 	"PARSE_FILE_ERROR": "Datei kann nicht erkannt werden",
 	"MODS_LIST_TITLE": "Modifikationen",
 	"SEARCH": "Suche",
-	"LOADING_MODS": "Mods werden geladen",
+	"LOADING": "Herunterladen",
 	"ENABLE_MODS_SUPPORT": "Aktivieren von mods zu unterstützen",
-	"LOADING_TRANSLATION": "Übersetzungen herunterladen",
 	"MODS_LABEL": "Modifikationen",
+	"RELAUNCH_PROMPT": "Um den Mod zu laden, müssen Sie das Programm neu starten. Einen Neustart durchführen?",
 	"MODS_ADD_BUTTON": "Hinzufügen",
 	"INITIAL_LABEL": "Pfad zu initial.pak",
 	"MODS_WARNING" :" Unterstützung für Änderungen deaktiviert",
 	"INVALID_INITIAL_ERROR": "Ungültiger initial ausgewählt.pak",
+	"INVALID_MODS_ALERT1": "Fehler beim Laden dieser Änderungsdateien",
+	"INVALID_MODS_ALERT2": "Möglicherweise haben Sie die falsche Datei ausgewählt oder das Programm kann die Modifikationsdateien nicht erkennen.",
 	"NO_PROFILE": "Benutzerordner wurde nicht gefunden",
 	"MODS_FOLDER_NOT_EXISTED": "Ordner mit Mods nicht gefunden",
 	"MANUAL_INITIAL": "Manuelle Auswahl von initial.pak",
