--- a/files/src/scripts/translations/EN.json
+++ b/files/src/scripts/translations/EN.json
@@ -6,11 +6,13 @@
 	"PARSE_FILE_ERROR": "The file cannot be recognized",
 	"IGNORE": "Ignore",
 	"MODS_LIST_TITLE": "Mods",
-	"LOADING_MODS": "Mods loading",
+	"LOADING": "Loading",
 	"SEARCH": "Search",
-	"LOADING_TRANSLATION": "Translation loading",
 	"INITIAL_LABEL": "Path to initial.pak",
+	"RELAUNCH_PROMPT": "To add the mod, you need to restart the program. Perform a reboot?",
 	"INVALID_INITIAL_ERROR": "Invalid initial.pak selected",
+	"INVALID_MODS_ALERT1": "Failed to load these modification files",
+	"INVALID_MODS_ALERT2": "You may have selected the wrong file, or the program cannot recognize the modification files.",
 	"MODS_FOLDER_NOT_EXISTED": "Mod folder not found",
 	"ENABLE_MODS_LABEL": "Enable mods support",
 	"MODS_LABEL": "Mods",
