--- a/files/src/scripts/translations/RU.json
+++ b/files/src/scripts/translations/RU.json
@@ -7,11 +7,13 @@
 	"IGNORE": "Игнорировать",
 	"MODS_LIST_TITLE": "Модификации",
 	"SEARCH": "Поиск",
-	"LOADING_TRANSLATION": "Загрузка переводов",
+	"LOADING": "Загрузка",
+	"RELAUNCH_PROMPT": "Для загрузки мода необходима перезагрузка программы. Выполнить перезагрузку?",
 	"MODS_FOLDER_NOT_EXISTED": "Не найдена папка с модами",
 	"INITIAL_LABEL": "Путь к initial.pak",
 	"INVALID_INITIAL_ERROR": "Выбран неверный initial.pak",
-	"LOADING_MODS": "Загрузка модов",
+	"INVALID_MODS_ALERT1": "Не удалось загрузить следующие файлы модификаций",
+	"INVALID_MODS_ALERT2": "Возможно вы выбрали неверный файл, либо программа не может распознать файлы модификации.",
 	"MANUAL_INITIAL": "Ручной выбор initial.pak",
 	"MODS_LABEL": "Модификации",
 	"MODS_ADD_BUTTON": "Добавить",
@@ -46,13 +48,12 @@
 	"HOW_TO_USE_TITLE": "Как пользоваться",
 	"UPDATES_LABEL": "Обновления",
 	"INITIAL_NOT_FOUND": "initial.pak не найден.",
-	"INVALID_FOLDER_ERROR": "Вы выбрали неправильную папку!",
+	"INVALID_FOLDER_ERROR": "Вы выбрали неправильную папку. Попробуйте вручную выбрать initial.pak",
 	"LANGUAGE_MENU_ITEM_LABEL": "Язык",
 	"LIST_TITLE": "Выберите для редактирования",
 	"MAIN_LIST_TITLE": "Основное",
 	"NOTIFICATION": "Уведомление",
 	"NO_GAME_FOLDER": "Выбор папки с игрой обязателен!",
-	"NO_MEDIA_FOLDER": "Выбор папки [media] обязателен!",
 	"ONLY_DEVELOPER_EDIT_TEXT": "Только в режиме разработчика",
 	"OPEN_BUTTON": "Открыть",
 	"OPEN_INITIAL_BUTTON": "Открыть папку с initial.pak",
